# clion-arduino-demo

./: CMakeLists.txt  LICENSE  README.md  main.cpp  tester.cpp
lib/: demo.cpp  demo.h
